style.css
:root {
  --text:#2a2a2a;
  --text-med:#bbb;
  --text-faint:#ffdc68;
  --text-faint-alpha:#ffdc68a8;
  --text-ultra-faint:#d7d7d7;
  --highlight:#fffdcc;
  --header-bg:#c3dfe2;
  --bg:#fff;
  --bg-faint:#f3f3f3;
  --selection:#f7cb4577;
  --gold:#fadc7a;
}
::-moz-selection {background-color:var(--selection);}
::selection {background-color:var(--selection);}
body {background-color:var(--bg);color:var(--text);font-family:'Raleway', sans-serif;font-variant-ligatures:common-ligatures;font-weight:300;font-size:17px;margin:0 auto;overflow-x:hidden;width:100vw;text-rendering:optimizeLegibility;}
h1, h2, h5 {font-variant-ligatures:discretionary-ligatures;font-weight:700;line-height:1.1em;margin-top:0;margin-bottom:0;}
a {color:var(--text);text-decoration:none;}
b {font-weight:700;}
.hidden {display:none!important;}

html {width:100vw;overflow-x:hidden;}
.row {padding:40px 5vw;max-width:1200px;margin:0 auto;position:relative;}
@media screen and (min-width:1200px) {
  .row::before, .row::after {content:'';background-color:inherit;position:absolute;top:0;bottom:0;width:calc(50vw - 600px);right:100%;}
  .row::after {right:unset;left:100%;}
}
body a.btn {border:none;border-radius:6px;font-weight:bold;display:inline-block;margin-top:10px;padding:8px 14px;}
emoji {font-family:'apple color emoji','segoe ui emoji','noto color emoji','android emoji',emojisymbols,'emojione mozilla','twemoji mozilla','segoe ui symbol';font-weight:400;}

/* OVERVIEW */
#overview {background-color:var(--header-bg);box-shadow:0 0 0 12px rgba(98, 111, 113, .48);padding:40px 0 0;color:#2a2a2a;}
#overview section {position:relative;padding:0 5vw;margin:0;}
#overview > picture {display:block;width:100%;}
#overview img {display:block;max-width:100%;}
#overview h3 {font-size:1.1em;font-weight:300;letter-spacing:1.8px;margin-top:-120px;margin-bottom:120px;text-transform:uppercase;}
#overview h1 {font-size:36px;letter-spacing:2.5px;line-height:0.8em;margin-top:70px;font-family: 'Lobster', cursive;}
#overview h1 u {display:inline-block;margin-left:-.1em;margin-right:.07em;text-decoration:none;}
#overview h1 span {color:white;display:block;font-family:'Raleway';font-size:26px;font-weight:300;letter-spacing:2.4px;height:1em;line-height:0.5;margin-top:6px;margin-left:21px;overflow-y:hidden;}

@media screen and (min-width:391px) {
  #overview h3 {letter-spacing:4px;margin-top:-110px;}
  #overview h1 {font-size:44px;line-height:inherit;}
  #overview h1 span {font-size:28px;margin-top:-2px;}
}
@media screen and (min-width:500px) {
  #overview h3 {margin-top:-150px;margin-bottom:150px;}
  #overview h1 {font-size:55px;margin-top:40px;}
  #overview h1 span {font-size:38px;margin-left:30px;}
}
@media screen and (min-width:675px) {
  #overview {background-image:url(images/floor-small.jpg);background-position:bottom right;background-repeat:repeat-x;background-size:auto 131px;box-shadow:0 0 0 15px rgb(214 195 172 / 60%);padding:40px 0 0 5vw;}
  #overview > picture {margin-top:-115px;max-width:400px;margin-left:auto;}
  #overview section {padding:0;}
}
@media screen and (min-width:830px) {
  #overview {display:flex;align-items:flex-end;justify-content:center;}
  #overview::after {content:'';clear:left;display:block;}
  #overview section {padding-bottom:160px;width:100%;max-width:800px;}
  #overview > picture {margin:0;}
}
@media screen and (min-width:930px) {
  #overview h3 {letter-spacing:6.5px;margin-top:-170px;margin-bottom:190px;}
  #overview h1 {font-size:65px;margin-top:90px;letter-spacing:4px;}
  #overview h1 span {font-size:38px;height:1em;line-height:0.5em;margin-top:-6px;padding-left:2px;}
}
@media screen and (min-width:1050px) {
  #overview h1 {font-size:80px}
  #overview h1 span {margin-left:42px;padding-left:2px;}
}
@media screen and (min-width:1200px) {
  #overview {padding:40px 5vw 0;}
}

#overview .bio {letter-spacing:1px;line-height:1.9em;margin:40px 0;max-width:85vw;}

#overview ul {margin-left:-11px;padding-left:0;}
#overview li {display:inline-block;padding:0 4px;position:relative;}
#overview li::before {content:'|';position:absolute;left:-5px;}
#overview li:first-of-type::before {content:unset;}
#overview a {border-radius:4px;color:#2a2a2a;display:inline-block;letter-spacing:1px;padding:2px 5px;position:relative;}
#overview a:hover {background-color:#2a2a2a;color:white;}

@media screen and (min-width:400px) {
  #overview ul {margin-left:-15px;}
  #overview li {display:inline-block;padding:0 10px;position:relative;}
}
/* APPROACH */
#approach {display:none;}

/* WORK */
.work {padding-bottom:40px;}
.work img {margin:0 auto;display:block;max-height:100px;max-width:80%;transition:all 180ms;transition-timing-function:ease-out;}
.work h4 {margin:-20px 0 0;}
.work p {margin:.3em 0 .6em;}
.work .title {margin-top:40px;}

.work nav {text-align:right;}
#sort-by {border:2px solid var(--text-faint);border-radius:6px;cursor:pointer;padding:6px;vertical-align:middle;}
#sort-by:hover {border-color:var(--text-faint);}
#sort-by * {user-select:none;}
#sort-by i {font-size:1.4em;vertical-align:bottom;padding-left:8px;}

@media (max-width:669px) {
  /* WHILE SORT-BY IS BEING DEVELOPED ON MOBILE */
  .flex-grid .headings, #sort-by {display:none;}
}
@media (min-width:670px) {#sort-by {border-color:transparent;}}

.flex-grid {display:flex;flex-flow:wrap;justify-content:space-between;}
.flex-grid a {position:relative;margin:10px 0;width:47%;}

.flex-grid figure{
  align-items:center;
  background:no-repeat center;
  background-size:100% 100%;
  border-radius:8px;
  box-shadow:0 0 13px -9px var(--text-med);
  display:flex;
  flex-flow:column;
  font-weight:700;
  justify-content:space-evenly;
  letter-spacing:.1px;
  padding:15px;
  margin:0;
  min-height:160px;
  position:relative;
  overflow:hidden;
  text-align:center;
  transition:all 250ms, background-size 180ms, transform 180ms;
  transition-timing-function:ease-out;
  z-index:1;
}
.flex-grid a:hover figure {box-shadow:0 10px 30px 0 var(--text-med);transform:scale(1.05);}
/* ... */

